# vubi-sdl

./: CMakeLists.txt  install-deps.sh
game/: CMakeLists.txt
game/src/: game.cpp  game.h  game.hpp  main.cpp
vubi/: CMakeLists.txt
vubi/include/vubi/: application.h  application.hpp  sdl_application.h  texture.hpp
vubi/include/vubi/renderer/: renderer.h
vubi/src/: application.cpp  sdl_application.cpp
